--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -8,36 +8,42 @@ on:
       - 'v*'
   workflow_dispatch:
 
-env:
-  IMAGE_NAME: conlab/notion2vector
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GIT_REF: ${{ github.head_ref || github.ref_name }} 
+      REPO_NAME: conlab/notion2vector
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set Docker Tag
+        run: |
+          echo "DOCKER_TAG=$REPO_NAME:$GIT_REF" >> $GITHUB_ENV
+      
+      - name: replace docker tag if main
+        if: github.ref_name == 'main'
+        run: |
+          echo "DOCKER_TAG=$REPO_NAME:latest" >> $GITHUB_ENV
 
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: |
-          ${{ env.IMAGE_NAME }}:latest
-          ${{ startsWith(github.ref, 'refs/tags/v') && env.IMAGE_NAME }}:${{ github.ref_name }}
-        cache-from: type=gha
-        cache-to: type=gha, mode=max
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile 
+          platforms: linux/amd64
+          push: true
+          tags: ${{ env.DOCKER_TAG }}
+          cache-from: type=gha
+          cache-to: type=gha, mode=max
